<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageView01"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_experience" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_experience" />

    <TextView
        android:id="@+id/textExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignLeft="@+id/textEstablish"
        android:text="@string/experience"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textExplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ImageView01"
        android:layout_alignLeft="@+id/textExperience"
        android:text="@string/explain_it"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/my_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/document_it"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/textEstablish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/establish"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="17dp"
        android:text="@string/get_Started"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_below="@+id/my_textview"
        android:layout_marginTop="52dp"
        android:src="@drawable/ic_establish" />

</RelativeLayout>